openshift/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shaman
  namespace: shaman
spec:
  selector: { app: shaman }
  ports:
    - { name: http, port: 8080, targetPort: 8080 }
